# neo-mittens

./: .gitignore  DEPENDENCIES.md  FRESH_INSTALL.md  README.md  auto-session-config.lua  bootstrap.sh  continue-doc.ts  dap-cpp.lua  format-design-doc.ts  gamon-ultrawide.sh  gdbinit  gitsigns.lua  init.lua  install-gaming.sh  lazy.lua  lsp-config.lua  lsp.lua  luasnip.lua  obelisk.md  settings.lua  telescope.lua  test-completions.sh  test-zsh-completions.zsh  treesitter-config.lua  verify_type_hints.py  workspace-switcher.py
.claude/commands/: ralph-init.md  ralph-plan.md  ralph-status.md  ralph-task.md  tix-status.md  tix-task.md
.opencode/: package-lock.json  package.json
.opencode/plugins/: auto-compact.ts
.opencode/tool/: ralph-status.ts
.opencode/tools/: ddg-search.ts  drawio.ts  google-auth.ts  google-calendar.ts  google-docs.ts  google-drive.ts  google-gmail.ts  google-sheets.ts  google-slides.ts  jira.ts  ralph-status.ts  tix-status.ts
after/plugin/: auto-session.lua  copilot.lua  dap.lua  gitsigns.lua  harpoon.lua  indent.lua  lsp.lua  lualine.lua  metals.lua  oil.lua  scrollview.lua  telescope.lua  term.lua  treesitter.lua  undotree.lua
ansible/: README.md  ansible.cfg  inventory.yml  site.yml
ansible/group_vars/: all.yml  gaming_desktops.yml
app/: DEPENDENCIES.md
app/ralph/: .gitignore  AGENTS.md  GUARDRAILS.md  PROMPT_build.md  PROMPT_decompose.md  PROMPT_investigate.md  PROMPT_plan.md  PROMPT_verify.md  __main__.py  acp.py  analysis.py  cli.py  config.py  context.py  git.py  ledger.py  models.py  opencode.py  prompts.py  py.typed  reconcile.py  requirements-dev.txt  requirements.txt  setup.sh  state.py  subagent.py  tix.py  utils.py  validation.py
app/tix/: .clang-tidy  AGENTS.md  CMakeLists.txt  Makefile  TIX_DESIGN.md
app/tix/doc/man/: tix-issue.1  tix-note.1  tix-plan.5  tix-query.1  tix-report.1  tix-task.1  tix.1  tql.7
app/tix/src/: batch.c  batch.h  cmd.c  cmd.h  cmd_batch.c  cmd_compact.c  cmd_init.c  cmd_issue.c  cmd_log.c  cmd_note.c  cmd_query.c  cmd_report.c  cmd_search.c  cmd_status.c  cmd_sync.c  cmd_task.c  cmd_tree.c  cmd_validate.c  color.c  color.h  common.h  config.c  config.h  db.c  db.h  db_query.c  db_refs.c  db_replay.c  git.c  git.h  json.c  json.h  log.c  log.h  main.c  report.c  report.h  search.c  search.h  ticket.c  (+10 more)
app/tix/test/: testing.c  testing.h
app/tix/test/e2e/: test_assigned.c  test_batch.c  test_config.c  test_error_paths.c  test_git_integration.c  test_json.c  test_labels.c  test_new_fields.c  test_report.c  test_resolved.c  test_search.c  test_sync.c  test_task_lifecycle.c  test_tql.c  test_tql_features.c  test_tree.c  test_validate.c
bnetswitch/: Cargo.toml  README.md
bnetswitch/src/: accounts.rs  agent.rs  config.rs  cpu_topology.rs  lfg.rs  lfg_parse.rs  lutris.rs  main.rs  rank_icons.rs  ranks.rs  switcher.rs  tcno.rs  term_caps.rs  wine_reg.rs
bnetswitch/tests/: merge_check.rs  parse_live.rs  parse_trace.rs
gamewatcher-config/: games.conf
git-hooks/: prepare-commit-msg
hypr/: gaming.conf  hypridle.conf  hyprland.conf  hyprpaper.conf  hyprshade.toml  rotate-walls.sh
kitty/: kitty.conf
kitty/themes/: local.conf  obelisk.conf
lua/: dap-cpp.lua  debug.lua  gdb-bridge.lua  init.lua  lazy-config.lua  lsp-config.lua  lua  misc-config.lua  scrollview-config.lua  telescope-config.lua  term-config.lua  wezterm.lua
lua/plugins/: cmp.lua  dap.lua  gitsigns.lua  harpoon.lua  indent.lua  lsp.lua  lualine.lua  metals.lua  oil.lua  scrollview.lua  telescope.lua  treesitter.lua  undotree.lua
lua/snips/: cpp.lua
powerplant/: RALPH.md  README.md  bnetswitch  calibre-ssh-sync.sh  gameoff.sh  gameon-tv.sh  gameon-ultrawide.sh  gcai  get-ultrawide  host-theme.sh  hypernav.py  hypr-hdr-refresh  ralph  ralph-completion.bash  ralph-completion.zsh  ralph-stream  ralph-type-check.py  ralph.py  ralph2  set_tmux_pane_title.sh  ssh-themed  start-waybar  swww-slideshow  tix  workspace-switcher.py
ralph/: AGENTS.md  PROMPT_build.md  PROMPT_decompose.md  PROMPT_investigate.md  PROMPT_plan.md  PROMPT_rescue.md  PROMPT_verify.md  __init__.py  __main__.py  analysis.py  cli.py  config.py  context.py  git.py  models.py  opencode.py  plan.jsonl  plan.jsonl.bak.tmp  prompts.py  state.py  utils.py
ralph/commands/: __init__.py  config_cmd.py  construct.py  init.py  task.py  watch.py
ralph/specs/: agent-mode.md  construct-mode.md  ralph-plan-system.md  ralph-refactor.md  tsan-output-handling.md
ralph/stages/: __init__.py  base.py  build.py  decompose.py  investigate.py  verify.py
ralph/tests/: __init__.py  conftest.py
ralph/tui/: __init__.py  art.py  dashboard.py  fallback.py
rofi/: clipboard.sh  config.rasi  i3-new-workspace.sh  i3-rename-workspace.sh  i3-select-workspace.sh  powermenu.sh
rofi/themes/: catppuccin-mocha.rasi
scripts/: gamelaunch  gamewatcher
server/: .gitignore  README.md  bootstrap.sh
server/ai-llm/: README.md
server/backup/: README.md
server/ci/: README.md
server/clawdbot/: README.md
server/opencode/: README.md  install.sh  opencode-manager.sh  opencode-webui.service
server/system/: fstab-data-partition.conf  install.sh
skills/circleci/: SKILL.md
tmux/: .gitignore
userscripts/: README.md  bnetswitch-lfg-loader.user.js  bnetswitch-lfg.user.js
waybar/: colors.css  config.jsonc
wofi/: README.md  calc.sh  clipboard.sh  config  emoji.sh  emojis.tsv  powerbar.css  powerbar.sh  powermenu.sh  style.css  update_emojis.sh
(+143 files in other folders)
